--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,18 @@
     </dependency>
 
 
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.6.1</version>
+    </dependency>
+
+
 
 
     <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
