--- a/pom.xml
+++ b/pom.xml
@@ -61,14 +61,6 @@
     </dependency>
 
 
-
-    <!-- https://mvnrepository.com/artifact/com.mangofactory/swagger-springmvc -->
-    <dependency>
-      <groupId>com.mangofactory</groupId>
-      <artifactId>swagger-springmvc</artifactId>
-      <version>1.0.1</version>
-    </dependency>
-
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -184,16 +176,28 @@
     </dependency>
 
 
+    <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
       <version>2.6.1</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
       <version>2.6.1</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.5.18</version>
+    </dependency>
+
+
 
 
 
