--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
       <version>1.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/taglibs/standard -->
     <dependency>
@@ -197,7 +203,11 @@
       <version>1.5.18</version>
     </dependency>
 
-
+    <!--<dependency>-->
+      <!--<groupId>commons-codec</groupId>-->
+      <!--<artifactId>commons-codec</artifactId>-->
+      <!--<version>1.6</version>-->
+    <!--</dependency>-->
 
 
 
