change sql words

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 user=root
 password=46132205092017
 driverclass=com.mysql.jdbc.Driver
-jdbcurl=jdbc:mysql:///atits?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
+jdbcurl=jdbc:mysql://47.104.26.79:3306/atits?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
 initialPoolSize=5
 maxPoolSize=10
