--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,12 @@
     </dependency>
 
 
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
 
 
 
