--- a/.gitignore
+++ b/.gitignore
@@ -113,4 +113,7 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+src/main/unittest/
 
+
+.idea/inspectionProfiles/
