--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.atits</groupId>
-  <artifactId>atits_app</artifactId>
+  <artifactId>atits_service</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>atits_app Maven Webapp</name>
@@ -219,6 +219,6 @@
 
   </dependencies>
   <build>
-    <finalName>atits_app</finalName>
+    <finalName>atits_service</finalName>
   </build>
 </project>
