--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>atits_service</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>atits_app Maven Webapp</name>
+    <name>atits_service Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies><!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina -->
 
