--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,13 @@
             <version>8.5.27</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.thetransactioncompany/cors-filter -->
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.5</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
         <!--<dependency>-->
